<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="new_crime">New Crime</string>
    <string name="empty_list_message">The list is empty</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="crime_deleted_message">Crime deleted</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="new_photo_text">New Photo</string>
    <string name="delete_photo_text">Delete Photo</string>
    <string name="photo_deleted_message">Photo deleted</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_time_label">Time</string>
    <string name="crime_date_label">Date</string>
    <string name="crime_state_label">State</string>
    <string name="crime_solved_label">Solved</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="crime_suspect_label">Suspect</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_report_subject">Criminal Intent - Crime Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered at %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="suspect_deleted_message">There is no suspect</string>
    <string name="crime_photo_no_image_description">Take photo of crime scene (photo not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="go_to_start_button_description">Go to the first page</string>
    <string name="go_to_end_button_description">Go to the last page</string>
</resources>